--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,10 @@ a.info {
     border: 1px solid var(--backgroundColor);
 }
 
+.adminLinks {
+    display: flex;
+}
+
 /** 
  * Footer global de la page.
  */
